[gd_scene load_steps=8 format=3 uid="uid://dsmfcrbijlumj"]

[ext_resource type="Script" uid="uid://c7v4uwpeqmxpr" path="res://Player.gd" id="1_4flbx"]
[ext_resource type="AudioStream" uid="uid://bciyrbg01gq13" path="res://Audio/SFX - Death Explosion.ogg" id="2_onrkg"]
[ext_resource type="AudioStream" uid="uid://hi4qtfmoxe70" path="res://Audio/SFX - Success.ogg" id="3_i3pqv"]
[ext_resource type="AudioStream" uid="uid://dv1o2rih0r4oa" path="res://Audio/SFX - Main engine thrust.ogg" id="4_hqtel"]
[ext_resource type="PackedScene" uid="uid://b1hbgk4ue76u7" path="res://booster_particles.tscn" id="5_sweqy"]

[sub_resource type="CylinderMesh" id="CylinderMesh_hqtel"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4flbx"]

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
contact_monitor = true
max_contacts_reported = 10
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_4flbx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CylinderMesh_hqtel")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_4flbx")

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_onrkg")

[node name="LevelPassedAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i3pqv")

[node name="RocketThrustAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_hqtel")

[node name="BoosterParticles" parent="." instance=ExtResource("5_sweqy")]
transform = Transform3D(0.997273, 0, 0, 0, 0.997273, 0, 0, 0, 0.997273, 0, 0, 0)
amount = 20
trail_lifetime = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
